[package]
name = "webserver"
version = "0.1.0"
authors = ["Cameron Barnes <cameron_barnes@outlook.com>"]
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# Personally not a big fan of this warning/error, we're going to exclude it from pedantic
module_name_repetitions = "warn"

[profile.release]
opt-level = 3 # change to s to reduce binary size with a performance tradeoff
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = "symbols"

[dependencies]
itertools = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"

threadpool = "1.8"
urlencoding = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0" # This should be used with custom error types any time the error needs to contain data that we want to use

# Above this is stuff that's almost always going to be wanted, bellow is more situational
human-panic = "2.0" # Optional, but recommended when sharing with end users
clap = { version = "4.5", features = ["derive"] }
#enum-iterator = "2.1"
# I find this covers a lot of enum boilerplate
# Recommended features include display, from, is_variant, into, deref, and dref_mut
derive_more = { version = "1.0", features = ["display", "from_str", "is_variant"] }

# Enable one of the following if this program uses hashmaps
#rustc-hash = "2.0" # Poor quality but very high integer performance
ahash = "0.8" # Should be used most of the time instead of the default HashMap implementation
